# storage/api-docs/api-docs.json
@@ -350,118 +350,7 @@
                 }
             }
         },
-        "/products": {
-            "get": {
-                "tags": [
-                    "Products"
-                ],
-                "summary": "List all products",
-                "operationId": "c1ff6f862214e1896c59cfe0491ce0e8",
-                "responses": {
-                    "200": {
-                        "description": "Success"
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "Products"
-                ],
-                "summary": "Create product",
-                "operationId": "399770d33fa4672f1216707d0e236763",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "name",
-                                    "price",
-                                    "condition",
-                                    "stock",
-                                    "user_id",
-                                    "category_id"
-                                ],
-                                "properties": {
-                                    "name": {
-                                        "type": "string",
-                                        "example": "Goku Super Sayajin"
-                                    },
-                                    "description": {
-                                        "type": "string",
-                                        "example": "Action figure raro"
-                                    },
-                                    "price": {
-                                        "type": "number",
-                                        "example": 350
-                                    },
-                                    "rarity": {
-                                        "type": "string",
-                                        "example": "raro"
-                                    },
-                                    "condition": {
-                                        "type": "string",
-                                        "enum": [
-                                            "novo",
-                                            "usado",
-                                            "restaurado"
-                                        ],
-                                        "example": "novo"
-                                    },
-                                    "stock": {
-                                        "type": "integer",
-                                        "example": 3
-                                    },
-                                    "user_id": {
-                                        "type": "integer",
-                                        "example": 1
-                                    },
-                                    "category_id": {
-                                        "type": "integer",
-                                        "example": 1
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "201": {
-                        "description": "Created"
-                    },
-                    "422": {
-                        "description": "Validation error"
-                    }
-                }
-            }
-        },
         "/products/{id}": {
-            "get": {
-                "tags": [
-                    "Products"
-                ],
-                "summary": "Show product",
-                "operationId": "b46f4aa73232d0368eee698a082342a4",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success"
-                    },
-                    "404": {
-                        "description": "Not found"
-                    }
-                }
-            },
             "delete": {
                 "tags": [
                     "Products"
@@ -646,130 +535,7 @@
                 }
             }
         },
-        "/users": {
-            "get": {
-                "tags": [
-                    "Users"
-                ],
-                "summary": "List all users",
-                "operationId": "7e2f5799553ec93c9c43e2a58490d447",
-                "responses": {
-                    "200": {
-                        "description": "Success"
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Create user",
-                "operationId": "a1fce870c566eb5fc0cf3178ec5d2fed",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "name",
-                                    "email",
-                                    "password",
-                                    "cpf",
-                                    "birth_date",
-                                    "phone"
-                                ],
-                                "properties": {
-                                    "name": {
-                                        "type": "string",
-                                        "example": "George"
-                                    },
-                                    "email": {
-                                        "type": "string",
-                                        "example": "george@email.com"
-                                    },
-                                    "password": {
-                                        "type": "string",
-                                        "example": "123456"
-                                    },
-                                    "cpf": {
-                                        "type": "string",
-                                        "example": "000.000.000-00"
-                                    },
-                                    "birth_date": {
-                                        "type": "string",
-                                        "example": "2000-01-01"
-                                    },
-                                    "phone": {
-                                        "type": "string",
-                                        "example": "81999999999"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "201": {
-                        "description": "Created"
-                    },
-                    "422": {
-                        "description": "Validation error"
-                    }
-                }
-            }
-        },
         "/users/{id}": {
-            "get": {
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Show user",
-                "operationId": "910a0c7cf580e1c605648d82a4e57f46",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success"
-                    },
-                    "404": {
-                        "description": "Not found"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Delete user",
-                "operationId": "43dd20becb1f47444e484cbb18ce345c",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Deleted"
-                    },
-                    "404": {
-                        "description": "Not found"
-                    }
-                }
-            },
             "patch": {
                 "tags": [
                     "Users"
